# eclipy

./: CMakeLists.txt  MANIFEST.in  README.md  ROADMAP.md  pyproject.toml  test_eclipy.py
.github/workflows/: publish-package.yml
eclipy/: __init__.py
eclipy/_core/: __init__.py  numeric.py  numeric.pyi
eclipy/core/: numeric.py  numeric.pyi
eclipy/types/: typing.py  typing.pyi
eclipy/typing/: __init__.py  __init__.pyi
src/: binding.cpp  eclipy.cpp  eclipy.h
swishpy/: __init__.py  typing.pyi
