[build-system]
requires = ["scikit-build-core", "setuptools", "cmake >= 3.15"]
build-backend = "scikit_build_core.build"

[project]
name = "eclipy"
version = "1.0.0-alpha.3"
description = "A powerful, lightweight Python library designed to provide a variety of functions."
#requires-python = ">=3.10"
readme = "README.md"
classifiers = []
dependencies = []

[project.urls]
source = "https://github.com/DevByEagle/eclipy"
tracker = "https://github.com/DevByeagle/eclipy/issues"

[tool.scikit-build.cmake]
build-type = "Release"
generate = "Ninja"  # or "Unix Makefiles" for other systems
build-dir = "build"  # Customize as needed

#[tool.cmake]

